@@ -1,5 +1,12 @@
 2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
+	* Tomboy/SyncDialog.cs, Tomboy/SyncManager.cs,
+	  Tomboy/FileSystemSyncServer.cs: Initial support for cancelling a
+	  sync transaction.  Currently only safe when done during conflict
+	  resolution period before applying updates from server.
+
+2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
 	* Tomboy/SyncDialog.cs: Programmatic note renaming now works, though
 	  there are some formatting errors remaining.
 
